--- a/Modules/BWO/Resources/assets/sass/_layout.scss
+++ b/Modules/BWO/Resources/assets/sass/_layout.scss
@@ -436,3 +436,22 @@ footer{
     }
 
 }
+
+.post-container {
+
+  .page-builder {
+    padding: 0 20px 40px;
+
+    h2 {
+      color: #666;
+    }
+
+  }
+
+  img {
+    max-width: 100%;
+    margin: 0 5%;
+    width: auto;
+    width: 90%;
+  }
+}
