--- a/Modules/BWO/Resources/assets/sass/_layout.scss
+++ b/Modules/BWO/Resources/assets/sass/_layout.scss
@@ -132,7 +132,8 @@ header{
         }
         ul{
           padding-left:0px;
-          max-width: 100%;
+          /*max-width: 100%;*/
+
           li{
           a{
             color:$brand-black-color;
