--- a/Modules/BWO/Resources/assets/sass/_blog.scss
+++ b/Modules/BWO/Resources/assets/sass/_blog.scss
@@ -58,6 +58,11 @@ body{
             @include font(20,22,600);
             height:42px;
             padding:15px;
+
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
           }
           p{
             color:$brand-light-gray-color;
