documents to candidates

--- a/Modules/RRHH/Resources/assets/sass/_customer-docs.scss
+++ b/Modules/RRHH/Resources/assets/sass/_customer-docs.scss
@@ -1,4 +1,4 @@
-#customer_documents {
+#customer_documents, #candidate-documents {
 
   .fields-list-container{
     padding:0px;
@@ -21,7 +21,7 @@
 
     .field-inputs {
       padding-right:100;
-      
+
     }
 
     .field-actions {
