--- a/public/modules/bwo/css/app.css
+++ b/public/modules/bwo/css/app.css
@@ -15095,23 +15095,28 @@ body .doc-col {
   right: 100px;
 }
 
-#customer_documents .dz-preview {
+#customer_documents .dz-preview,
+#candidate_documents .dz-preview {
   display: none;
 }
 
-#customer_documents .container {
+#customer_documents .container,
+#candidate_documents .container {
   width: 100% !important;
 }
 
-#customer_documents .btn-default {
+#customer_documents .btn-default,
+#candidate_documents .btn-default {
   background-color: #e0e0e0;
 }
 
-#customer_documents .fields-list-container {
+#customer_documents .fields-list-container,
+#candidate_documents .fields-list-container {
   padding: 0px;
 }
 
-#customer_documents .typology-field .field-type {
+#customer_documents .typology-field .field-type,
+#candidate_documents .typology-field .field-type {
   display: inline-block;
   width: 150px;
   position: absolute;
@@ -15126,7 +15131,8 @@ body .doc-col {
   margin-bottom: 10px;
 }
 
-#customer_documents .typology-field .field-actions {
+#customer_documents .typology-field .field-actions,
+#candidate_documents .typology-field .field-actions {
   position: absolute;
   top: 11px;
   right: 0px;
@@ -15135,18 +15141,21 @@ body .doc-col {
   height: 20px;
 }
 
-#customer_documents .typology-field .field-actions a {
+#customer_documents .typology-field .field-actions a,
+#candidate_documents .typology-field .field-actions a {
   font-size: 12px;
   line-height: 50px;
   font-weight: 400;
   display: inline-block;
 }
 
-#customer_documents .typology-field a.remove-field-btn {
+#customer_documents .typology-field a.remove-field-btn,
+#candidate_documents .typology-field a.remove-field-btn {
   color: #fc4b6c;
 }
 
-#customer_documents .typology-field .field-name {
+#customer_documents .typology-field .field-name,
+#candidate_documents .typology-field .field-name {
   line-height: 46px;
   text-align: left;
   padding-left: 15px;
@@ -15157,38 +15166,45 @@ body .doc-col {
   text-overflow: ellipsis;
 }
 
-#customer_documents .typology-field .field-inputs {
+#customer_documents .typology-field .field-inputs,
+#candidate_documents .typology-field .field-inputs {
   padding-right: 100;
   position: relative;
   padding-left: 160px;
   padding-top: 2px;
 }
 
-#customer_documents .typology-field .field-actions {
+#customer_documents .typology-field .field-actions,
+#candidate_documents .typology-field .field-actions {
   width: 80px;
 }
 
-#customer_documents .typology-field i.fa {
+#customer_documents .typology-field i.fa,
+#candidate_documents .typology-field i.fa {
   font-size: 16px;
   padding-right: 10px;
 }
 
-#customer_documents .fields-list-container {
+#customer_documents .fields-list-container,
+#candidate_documents .fields-list-container {
   border: none;
 }
 
-#customer_documents .image-col .image {
+#customer_documents .image-col .image,
+#candidate_documents .image-col .image {
   background-color: #fafafa;
   border: 1px dashed #ccc;
   cursor: pointer;
   padding: 30px 20px;
 }
 
-#customer_documents .image-col .image p {
+#customer_documents .image-col .image p,
+#candidate_documents .image-col .image p {
   pointer-events: none;
 }
 
-#customer_documents .image-col .image:hover {
+#customer_documents .image-col .image:hover,
+#candidate_documents .image-col .image:hover {
   border: 1px dashed #000;
 }
 
