--- a/Modules/Architect/Resources/assets/sass/architect/_modal.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_modal.scss
@@ -176,5 +176,53 @@
       /*padding-bottom:0px;*/
     }
   }
+  &.model-modal{
+    .modal-container{
+      max-width: 840px;
+      margin: auto;
+      .modal-content{
+        .container{
+          .table{
+            .cell{
+              padding: 5px;
+              font-size: 16px;
+              line-height: 22px;
+              color: #5A5A5A;
+              font-weight: 300;
+            }
+            .first-column{
+              text-align: center;
+              width: 120px;
+            }
+            .second-column{
+              overflow: hidden;
+              text-align: right;
+            }
+            .table-header{
+              background-color: #F4F4F4;
+              padding: 5px;
+            }
+            .table-row{
+              padding: 5px;
+              border-bottom: 1px solid #B9B9B9;
+              .first-column{
+                float: left;
+              }
+              .second-column{
+                a{
+                  color: #5A5A5A;
+                  text-decoration: none;
+                  i{
+                    margin-right:5px;
+                  }
+                }
+              }
+            }
+
+          }
+        }
+      }
+    }
+  }
 
 }
