form biulder done

--- a/public/modules/extranet/css/app.css
+++ b/public/modules/extranet/css/app.css
@@ -115,296 +115,13 @@ li {
   background-size: cover;
 }
 
-#map-container {
-  min-height: 400px;
+#model-container .rightbar-page .page-content .field-inputs {
+  padding-left: 260px;
 }
 
-.kanban {
-  min-width: 1720px;
-}
-
-.kanban .card-container {
-  width: 340px;
-  padding-left: 10px;
-  padding-right: 10px;
-  display: inline-block;
-}
-
-.kanban .card-container .card-title {
-  font-size: 20px;
-  padding-left: 7px;
-  color: #000;
-}
-
-.kanban .card-container .card {
-  background: transparent;
-  border: 1px solid #B0C5D1;
-  height: calc(100vh - 250px);
-}
-
-.kanban .card-container .card .card-body {
-  padding: 7px 15px;
-}
-
-.kanban .card-container .card .card-body .candidate-drop-item {
-  margin: 7px 0;
-  background-color: #fff;
-  padding: 20px;
-  border: 1px solid #DCE5EA;
-  -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
-}
-
-.kanban .card-container .card .card-body .candidate-drop-item p {
-  font-size: 14px;
-  line-height: 19px;
-  font-weight: 100;
-  margin: 0;
-  color: #707070;
-}
-
-.kanban .card-container .card .card-body .candidate-drop-item p a {
-  padding: 2px 8px;
-  font-size: 14px;
-  line-height: 19px;
-  font-weight: 100;
-  color: #707070;
-  text-transform: none;
-}
-
-.kanban .card-container .card .card-body .candidate-drop-item p a.pink {
-  color: #FA5070;
-  border-color: #FA5070;
-}
-
-.kanban .card-container .card .card-body .candidate-drop-item p a.pink .fa {
-  color: #FA5070;
-}
-
-.kanban .card-container .card .card-body .candidate-drop-item p a .fa {
-  top: 0px;
-  font-size: 14px;
-  line-height: 19px;
-  font-weight: 100;
-}
-
-.sitelist {
-  /*DRAG AND DROP */
-  /* END DRAG AND DROP */
-}
-
-.sitelist .dragable-option .form-group .form-control {
-  border: none !important;
-}
-
-.sitelist .dashed-border {
-  border: 1px dashed #ccc;
-  padding: 10px;
-}
-
-.sitelist .content-field-dropper {
-  padding: 20px;
-  padding-bottom: 0px;
-}
-
-.sitelist .ajouter-element {
-  width: 100%;
-  text-align: center;
-}
-
-.sitelist .ajouter-element a {
-  font-size: 14px;
-  line-height: 19px;
-  font-weight: 400;
-  padding: 10px;
-}
-
-.sitelist #ajouter {
-  cursor: pointer;
-  padding: 5px;
-}
-
-.sitelist #ajouter h2 {
-  margin-top: 10px;
-}
-
-.sitelist .input-name-option {
-  font-weight: bold;
-  font-size: 14px;
-  width: 90%;
-  float: left;
-  margin-bottom: 0px;
-}
-
-.sitelist .input-value-option {
-  width: 90%;
-  margin-bottom: 5px;
-}
-
-.sitelist .remove-action {
-  cursor: pointer;
-}
-
-.sitelist [draggable] {
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-      user-select: none;
-  /* Required to make elements draggable in old WebKit */
-  -khtml-user-drag: element;
-  -webkit-user-drag: element;
-}
-
-.sitelist .dragable-option {
-  cursor: move;
-  border: 1px solid #ccc;
-  position: relative;
-  height: 50px;
-  overflow: hidden;
-  margin-bottom: 15px;
-  background-color: #fafafa;
-  border-radius: 6px;
-}
-
-.sitelist .tool-box {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 150px;
-  text-align: right;
-}
-
-.sitelist .tool-box a {
-  font-size: 12px;
-  line-height: 50px;
-  font-weight: 400;
-  display: inline-block;
-  color: #fc4b6c;
-}
-
-.sitelist .content-add {
-  padding-right: 170px;
-  padding-left: 20px;
-}
-
-.sitelist .content-add input {
-  width: 45%;
-  margin-right: 5%;
-  height: 38px;
-}
-
-.sitelist .page-row {
-  border: 1px dashed #ccc;
-  text-align: center;
-  width: 100%;
-  padding: 10px 5px;
-  margin-bottom: 0px;
-  min-height: 90px;
-}
-
-.sitelist .form-group.form-group-lg {
-  padding-bottom: 0px !important;
-}
-
-.candidate-page .field-group .btn-link {
-  width: 100%;
+#model-container .rightbar-page .page-content .field-type {
+  width: 240px;
   text-align: left;
-  border: 1px solid #ccc;
-  border-radius: 0px !important;
-  background-color: #dadada;
-  text-decoration: none;
-  margin: 0;
-}
-
-.candidate-page .field-group .field-name {
-  color: #455660;
-  padding-left: 10px;
-  text-transform: capitalize;
-  font-size: 18px;
-  line-height: 20px;
-  font-weight: 400;
-}
-
-.candidate-page .field-group .field-form {
-  padding: 20px 20px 20px 30px;
-  border-left: 2px solid #ccc;
-}
-
-.candidate-page .field-group div.btn:not(.collapsed):before {
-  content: "\25BE";
-  margin-right: 0px;
-  position: absolute;
-  top: 9px;
-  right: 19px;
-  font-size: 18px;
-  color: #455660;
-}
-
-.candidate-page .field-group div.btn.collapsed:before {
-  content: "\25B8";
-  margin-right: 0px;
-  position: absolute;
-  top: 9px;
-  right: 19px;
-  font-size: 18px;
-  color: #455660;
-}
-
-.candidate-page .field-group #collapsematricule .btn {
-  margin: 0;
-}
-
-.file-form {
-  height: auto;
-}
-
-.file-form label {
-  display: block;
-}
-
-.file-form .medias-dropfiles {
-  background-color: #fafafa;
-  border: 1px dashed #ccc;
-  cursor: pointer;
-  padding: 30px 20px;
-}
-
-.file-form .medias-dropfiles p {
-  pointer-events: none;
-}
-
-.file-form .medias-dropfiles:hover {
-  border: 1px dashed #4a9fea;
-}
-
-.file-form .file-wrapper {
-  background-color: #fafafa;
-  border: 1px dashed #ccc;
-  cursor: pointer;
-  padding: 20px 20px 10px;
-  text-align: center;
-}
-
-.file-form .file-wrapper a {
-  word-break: break-all;
-}
-
-.file-form .file-wrapper .text-danger {
-  padding: 0;
-}
-
-.tags-filter {
-  width: 30%;
-}
-
-.select2-container--default .select2-selection--multiple {
-  border-radius: 0px !important;
-  background-color: #fafafa !important;
-  border: 1px solid #ccc !important;
-}
-
-.select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #4a9fea !important;
 }
 
 #customer_users {
