--- a/Modules/Architect/Resources/assets/sass/architect/_modal.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_modal.scss
@@ -191,12 +191,13 @@
               font-weight: 300;
             }
             .first-column{
-              text-align: center;
-              width: 120px;
+              text-align: left;
+              overflow: hidden;
             }
             .second-column{
-              overflow: hidden;
-              text-align: right;
+              text-align: center;
+              width: 120px;
+
             }
             .table-header{
               background-color: #F4F4F4;
@@ -206,9 +207,10 @@
               padding: 5px;
               border-bottom: 1px solid #B9B9B9;
               .first-column{
-                float: left;
+
               }
               .second-column{
+                float: right;
                 a{
                   color: #5A5A5A;
                   text-decoration: none;
