--- a/Modules/Extranet/Resources/assets/sass/backend/_elements.scss
+++ b/Modules/Extranet/Resources/assets/sass/backend/_elements.scss
@@ -8,3 +8,30 @@
 		}
 	}
 }
+
+#modal-models{
+	@include font(16,22,300);
+	.table-header{
+		padding: 10px 20px;
+		background-color: #F4F4F4;
+	}
+	.table-row{
+		padding:10px;
+		border-bottom:1px solid #ccc;
+		.second-column{
+			float:right;
+			a{
+				color:#455660;
+				text-decoration: none;
+				padding-left: 20px;
+				padding-right: 20px;
+				&:hover{
+					text-decoration: none;
+				}
+			}
+		}
+		.first-column{
+			overflow: hidden;
+		}
+	}
+}
