--- a/Modules/Front/Resources/assets/sass/_buttons.scss
+++ b/Modules/Front/Resources/assets/sass/_buttons.scss
@@ -6,8 +6,10 @@
   padding:9px 28px;
   @include font(14,16,400);
   color:#000;
-  border:none;
-
+  border-radius:0;
+  i{
+    margin-right: 10px;
+  }
   @extend .animate;
 
   &:hover {
@@ -29,6 +31,17 @@
 
   &:visited{
     background-color:auto;
+  }
+
+  &.btn-primary{
+    background-color:$secondary-color;
+    color:#fff;
+    border-color:$secondary-color;
+    &:focus, &:active, &:active:focus, &:hover {
+      background-color:$primary-color;
+      color:#fff;
+      border-color:$primary-color;
+    }
   }
 
 }
